<resources>
    <string name="app_name">MovieDBKt</string>

    /*Authorization*/
    <string name="authorize_please">Authorize please</string>
    <string name="email">User name</string>
    <string name="password">Password</string>

    /*Account details*/
    <string name="username">Username: %s</string>
    <string name="name">Name: %s</string>
    <string name="include_adult">Include adult: %s</string>

    /*Details*/
    <string name="description">Description: %s</string>
    <string name="type_movie">Type: Movie</string>
    <string name="type_tv">Type: TV Show</string>
    <string name="type">Type: %s</string>
    <string name="genre">Genre: %s</string>
    <string name="number_of_seasons">Number of seasons: %s</string>
    <string name="title_rating" formatted="true">Movie rating %s</string>

    /*Star details*/
    <string name="famous_for">Famous for</string>
    <string name="biography">Biography</string>

    /* Toolbar's titles */
    <string name="title_my_lists">Movies lists</string>
    <string name="title_read_about_star">Read about star</string>
    <string name="title_settings">Settings</string>
    <string name="title_find_movie">Find movie</string>
    <string name="title_my_account">My account details</string>
    <string name="read_about_star">Read about star</string>
    <string name="title_latest_movies">The latest movies</string>
    <string name="title_latest_shows">The latest shows</string>
    <string name="title_on_air_shows">The currently on the air shows</string>
    <string name="title_popular_movies">The popular movies</string>
    <string name="title_popular_shows">The popular shows</string>
    <string name="title_top_rated_shows">The top rated shows</string>
    <string name="title_recommended_movies">Recommended Movies</string>
    <string name="title_recommended_tv_shows">Recommended TV Shows</string>
    <string name="title_home">Movie database</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    /* Tab's titles */
    <string name="tab_title_profile">User Profile</string>
    <string name="tab_title_favorite_movies">Favorite Movies</string>
    <string name="tab_title_favorite_shows">Favorite TV Shows</string>
    <string name="tab_title_watchlist_movies">Watchlist Movies</string>
    <string name="tab_title_watchlist_shows">Watchlist TV Shows</string>

    /*Buttons titles*/
    <string name="btn_search">Search</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_rate">Rate</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_to_list">Add to list</string>
    <string name="btn_add_list">Add list</string>
    <string name="btn_delete_from_list">Delete from list</string>
    <string name="answer_cancel">Cancel</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="btn_sign_in">Sign in</string>

    /*Messages/
    <string name="msg_new_list_created_successfully">New list is successfully created</string>
    <string name="msg_new_movie_added_successfully">The movie is successfully added</string>
    <string name="msg_movie_rated_successfully">Thank you for your rating</string>
    <string name="msg_new_movie_removed_successfully">The movie is successfully removed</string>
    <string name="msg_no_famous_for_movies">No information about famous movies</string>
    <string name="msg_no_biography">No information about biography</string>
    <string name="question_about_deleting_movie">Do you want to delete movie?</string>
    <string name="question_about_deleting_tv_show">Do you want to delete tv show?</string>
    <string name="question_about_deleting_list">Do you want delete this list?</string>
    <string name="tos_pp">If you have no account,\nplease <a href="https://www.themoviedb.org/account/signup"><b>Sign Up</b></a> </string>
    <string name="question_about_adding">Do you want add this movie in the list?</string>
    <string name="enter_name">Enter title and description for new list</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_input_stars_name">"Input star's name"</string>
    <string name="input_title">Input movie\'s title</string>
    <string name="question_about_logout">Do you really want to logout?</string>

    /*Error messages/
    <string name="err_msg_no_data">No data</string>
    <string name="error_msg_input_movie_title">Input movie title</string>
    <string name="error_msg_star_name">Input star name</string>
    <string name="err_msg_connection_problem">Connection lost</string>
    <string name="err_msg_user_not_registered">Bad credentials</string>
    <string name="err_msg_something_goes_wrong">Something went wrong</string>
    <string name="err_msg_list_was_deleted">List was successfully deleted</string>
    <string name="err_msg_movie_was_deleted">The movie was successfully deleted</string>
    <string name="err_msg_tv_show_was_deleted">The TV show was successfully deleted</string>
    <string name="error_empty_user_name">Input user name!</string>
    <string name="error_empty_password">Input password!</string>
    <string name="error_not_valid_password">Not a valid password!</string>
    <string name="error_empty_title">Input list\'s title</string>
    <string name="err_msg_no_lists">You have no created lists</string>
    <string name="error_msg_no_movies">No movies in this list</string>
    <string name="error_msg_no_movies_with_such_title">No movies with such title</string>
    <string name="error_msg_no_movies_with_such_genre">No movies in this genre</string>
    <string name="error_msg_no_tv_shows_added_to_favorite">No shows added to favorite</string>
    <string name="error_msg_no_movies_added_to_favorite">No movies added to favorite</string>
    <string name="error_msg_no_tv_shows_added_to_watchlist">No shows added to watchlist</string>
    <string name="error_msg_no_movies_added_to_watchlist">No movies added to watchlist</string>
    <string name="error_msg_no_tv_shows">No shows for presenting</string>
    <string name="error_msg_no_recommended_tv_shows">No recommended shows</string>
    <string name="error_msg_no_movies_for_search">No movies for presenting</string>
    <string name="error_msg_no_star_with_such_name">No star with such name</string>
    <string name="error_msg_no_recommended_movies">No recommended movies</string>
    <string name="err_message_input_rating">Set Rating</string>
    <string name="err_msg_movie_added">Movie already is on your list</string>
    <string name="err_msg_no_reviews">No reviews yet…</string>
    <string name="err_msg_no_videos">No available videos…</string>
    <string name="err_msg_no_images">No available images…</string>

    /*Menu*/
    <string name="menu_delete">Delete</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_recommendations">Recommendations</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_images">More Images</string>
    <string name="menu_fab_latest_movies">Find the latest movies</string>
    <string name="menu_fab_latest_shows">Find the latest TV shows</string>
    <string name="menu_fab_popular_movies">Find the popular movies</string>
    <string name="menu_fab_popular_shows">Find the popular TV shows</string>
    <string name="menu_fab_top_rated_shows">Find the top rated TV show</string>
    <string name="menu_fab_currently_on_the_air_shows">Find the running TV show</string>
    <string name="menu_fab_find_by_genres">Find a movie by genre</string>
    <string name="menu_fab_find_by_title">Find a movie by title</string>
</resources>
