<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuMyProfile"
            android:icon="@drawable/ic_user"
            android:title="@string/title_my_account" />
        <item
            android:id="@+id/menuLists"
            android:icon="@drawable/ic_user"
            android:title="@string/title_my_lists" />
        <item
            android:id="@+id/menuLatestMovies"
            android:icon="@drawable/ic_user"
            android:title="@string/title_latest_movies" />
        <item
            android:id="@+id/menuReadAboutStar"
            android:icon="@drawable/ic_user"
            android:visible="false"
            android:title="@string/title_read_about_star" />

    </group>
</menu>