<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_half"
        android:layout_marginTop="@dimen/margin_half"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold|italic"
        tools:text="@string/username"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_half"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold|italic"
        tools:text="@string/name"
        />

    <TextView
        android:id="@+id/tvIncludeAdult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_half"
        android:text="@string/include_adult"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold|italic"
        />


</LinearLayout>
